Further style changes, fixing contrast errors

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -15,13 +15,13 @@
 }
 
 /* NAVBAR STYLING */
-
 .navbar {
-  background-color: #eee9de;
+  background-color: #eee9de60;
   height: 5rem;
   margin: 20px;
   border-radius: 16px;
   padding: 0.5rem;
+  transition: background-color 0.3s ease;
 }
 
 .img-logo {
@@ -30,7 +30,6 @@
   margin-right: 0.5rem;
   border-radius: 50%;
   box-shadow: 1px 1px 5px rgb(0, 0, 0);
-  /* object-fit: contain; */
 }
 
 .navbar-brand.me-auto {
@@ -91,7 +90,7 @@
 
 .login-button {
   background-color: rgb(8, 151, 32);
-  color: #ffffff;
+  color: #000000;
   font-size: 1rem;
   padding: 0.5rem 1rem;
   margin-right: 0.5rem;
@@ -110,7 +109,6 @@ button.navbar-toggler {
 }
 
 /* HERO STYLING */
-
 .hero-section {
   background: linear-gradient(
       180deg,
